# CLAP

./: README.md  pyproject.toml  requirements.txt
src/laion_clap/: hook.py
src/laion_clap/clap_module/: __init__.py  factory.py  model.py  utils.py
src/laion_clap/training/: data.py
